<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <ImageView
    android:id="@+id/logo_home_display"
    android:layout_width = "0dp"
    android:layout_height = "0dp"
    app:layout_heightPercent = "51.32%"
    app:layout_widthPercent="23.93%"
    app:layout_marginLeftPercent = "38.37%"
    app:layout_marginTopPercent="7.89%"/>

    <ImageView
        android:id="@+id/left_home_display"
        android:layout_width = "0dp"
        android:layout_height = "0dp"
        app:layout_heightPercent = "2.63%"
        app:layout_widthPercent="38.52%"
        app:layout_marginLeftPercent = "0%"
        app:layout_marginTopPercent="36.84%"
        android:src="@mipmap/left"/>

    <ImageView
        android:id="@+id/right_home_display"
        android:layout_width = "0dp"
        android:layout_height = "0dp"
        app:layout_heightPercent = "2.63%"
        app:layout_widthPercent="38.52%"
        app:layout_marginLeftPercent = "62%"
        app:layout_marginTopPercent="36.84%"
        android:src="@mipmap/right"/>


    <Button
        android:id="@+id/style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent = "4.5%"
        app:layout_widthPercent="10.04%"
        app:layout_marginLeftPercent = "8.63%"
        app:layout_marginTopPercent="40.79%"
        android:background="#00000000"
        android:textColor="@color/project_used"
        android:drawableLeft="@mipmap/style"
        android:text="@string/style"/>

    <!-- 每个按钮右边紧跟着一个隐藏的取消按钮 -->
    <Button
        android:id="@+id/style_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_heightPercent = "3.5%"
        app:layout_widthPercent="2.2%"
        app:layout_marginLeftPercent = "19%"
        app:layout_marginTopPercent="41.8%"
        android:background="@mipmap/exit"/>

    <Button
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent = "4.5%"
        app:layout_widthPercent="10.04%"
        app:layout_marginLeftPercent = "22.96%"
        app:layout_marginTopPercent="40.79%"
        android:background="#00000000"
        android:textColor="@color/project_used"
        android:drawableLeft="@mipmap/bedroom"
        android:text="@string/space"/>
    <!-- 每个按钮右边紧跟着一个隐藏的取消按钮 -->
    <Button
        android:id="@+id/space_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_heightPercent = "3.5%"
        app:layout_widthPercent="2.2%"
        app:layout_marginLeftPercent = "32.6%"
        app:layout_marginTopPercent="41.8%"
        android:background="@mipmap/exit"/>

    <Button
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent = "4.5%"
        app:layout_widthPercent="10.04%"
        app:layout_marginLeftPercent = "65.19%"
        app:layout_marginTopPercent="40.79%"
        android:background="#00000000"
        android:textColor="@color/project_used"
        android:drawableLeft="@mipmap/type"
        android:text="@string/ceramic"/>
    <!-- 每个按钮右边紧跟着一个隐藏的取消按钮 -->
    <Button
        android:id="@+id/type_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_heightPercent = "3.5%"
        app:layout_widthPercent="2.2%"
        app:layout_marginLeftPercent = "75%"
        app:layout_marginTopPercent="41.8%"
        android:background="@mipmap/exit"/>

    <Button
        android:id="@+id/size"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent = "4.5%"
        app:layout_widthPercent="10.04%"
        app:layout_marginLeftPercent = "80.22%"
        app:layout_marginTopPercent="40.79%"
        android:background="#00000000"
        android:textColor="@color/project_used"
        android:drawableLeft="@mipmap/size"
        android:text="@string/format"/>
    <!-- 每个按钮右边紧跟着一个隐藏的取消按钮 -->
    <Button
        android:id="@+id/size_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_heightPercent = "3.5%"
        app:layout_widthPercent="2.2%"
        app:layout_marginLeftPercent = "90.5%"
        app:layout_marginTopPercent="41.8%"
        android:background="@mipmap/exit"/>

    <Button
        android:id="@+id/home_display_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent = "6%"
        app:layout_widthPercent="14.33%"
        app:layout_marginLeftPercent = "3%"
        app:layout_marginTopPercent="90.84%"
        android:background="@mipmap/home_display_back"
        />


    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent = "25%"
        app:layout_widthPercent="63%"
        app:layout_marginLeftPercent = "18.52%"
        app:layout_marginTopPercent="7.89%">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <GridView
                    android:id="@+id/top_gridView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchMode="spacingWidthUniform"
                    android:numColumns="4"
                    android:horizontalSpacing="10dp"/>
        </LinearLayout>
    </HorizontalScrollView>

</android.support.percent.PercentFrameLayout>
